main.tf
provider "aws" {
  region = "eu-north-1"

  default_tags {
    tags = {
      "Name"    = var.project_name
      "Project" = var.project_name
    }
  }
}

resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr_range
}

resource "aws_subnet" "subnet" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = var.private_cidr_range
}

resource "aws_security_group" "security_group_allow_internal" {
  name        = "${var.project_name}-allow-internal"
  description = "Allow internal traffic"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    protocol    = "tcp"
    from_port   = 0
    to_port     = 65535
    cidr_blocks = [var.private_cidr_range, var.cluster_cidr_range]
  }

  ingress {
    protocol    = "udp"
    from_port   = 0
    to_port     = 65535
    cidr_blocks = [var.private_cidr_range, var.cluster_cidr_range]
  }

  ingress {
    protocol    = "icmp"
    from_port   = 0
    to_port     = 0
    cidr_blocks = [var.private_cidr_range, var.cluster_cidr_range]
  }

  egress {
    protocol    = "-1" # All
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "security_group_allow_external" {
  name        = "${var.project_name}-allow-external"
  description = "Allow external traffic"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 6443
    to_port     = 6443
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "icmp"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_key_pair" "access_key" {
  key_name   = "${var.project_name}-access-key"
  public_key = var.ec2_access_key
}

resource "aws_instance" "kubernetes_controllers" {
  for_each = toset(formatlist("%d", range(var.kubernetes_controllers_count)))

  ami           = var.ec2_ami_id
  instance_type = "t3.micro"

  private_ip = "10.240.0.1${each.value}"
  subnet_id  = aws_subnet.subnet.id
  vpc_security_group_ids = [
    aws_security_group.security_group_allow_internal.id,
    aws_security_group.security_group_allow_external.id,
  ]

  associate_public_ip_address = false
  key_name                    = aws_key_pair.access_key.key_name

  root_block_device {
    volume_type           = "gp2"
    volume_size           = 20
    delete_on_termination = true
  }

  tags = {
    "Name" = "controller-${each.value}"
    "type" = "controller"
  }
}
